<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.codequest.ui.home.HomeFragment"
        android:label="@string/nav_home" />

    <fragment
        android:id="@+id/nav_catalogue"
        android:name="com.codequest.ui.catalogue.CatalogueFragment"
        android:label="@string/nav_courses" />

    <fragment
        android:id="@+id/nav_leaderboard"
        android:name="com.codequest.ui.leaderboard.LeaderboardFragment"
        android:label="@string/nav_ranking" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.codequest.ui.profile.ProfileFragment"
        android:label="@string/nav_profile" />

</navigation>
